# Resume-Parser

./: .env.example  README.md  railway.json  run.py
backend/: .env.example  Dockerfile  main.py  models.py  parser.py  pyproject.toml  railway.json  requirements.txt  start.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: JobDescriptionInput.tsx  ResultsDashboard.tsx  ResumeUploader.tsx  ScoreGauge.tsx
